--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/noa.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://cal.com" />
+    <link rel="dns-prefetch" href="https://cal.com" />
     <title>noah.dave | Web Dev Portfolio</title>
   </head>
   <body>
