[SEO  update] : SEO met tags , google analytics add

--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://cal.com" />
     <link rel="dns-prefetch" href="https://cal.com" />
-    <title>noah.dave | Web Dev Portfolio</title>
+    <title>Noah Dave | Portfolio </title>
+    <meta name="description" content="Showcase of web development projects, skills, and expertise by Noah Dave. Explore live demos, source code, and more." />
+    <meta name="keywords" content="web developer, portfolio, React, TailwindCSS, projects, Noah Dave" />
+    <meta name="author" content="Noah Dave" />
+    <meta property="og:title" content="Noah Dave | Portfolio" />
+    <meta property="og:description" content="Explore web projects and skills by Noah Dave." />
+    <meta property="og:image" content="/images/portfolio.png" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E9LV230ND2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-E9LV230ND2');
+</script>
   </body>
 </html>
